<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/lightblackcolor"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Application.Activity.SingleImageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:background="@color/black"
            android:layout_height="56dp"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:background="@drawable/arrow"
                    android:layout_marginLeft="10dp"
                    android:padding="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/detail"
                    android:layout_marginLeft="60dp"
                    android:textSize="20dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content">

                </TextView>

            </FrameLayout>


        </com.google.android.material.appbar.AppBarLayout>




        <ImageView
            android:id="@+id/singleImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"
            android:contentDescription="@string/main_image"
            />







        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/lightblackcolor"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:text="@string/tittle"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/title_text"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:maxLines="5"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="75dp"
                    android:text="@string/size"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/size_text"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:text="@string/rating"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/rating_text"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:text="@string/weight"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:layout_height="wrap_content">



                </TextView>
                <TextView
                    android:id="@+id/weight_text"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="75dp"
                    android:text="@string/height"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:layout_height="wrap_content">
                </TextView>
                <TextView
                    android:id="@+id/height_text"
                    android:textSize="14sp"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>






</ScrollView>